# graph-particle-filter

./: .gitignore  1_setup_likelihood_matrix.sh  2_train_pred_model.sh  3_final_eval.sh  CMakeLists.txt  GCN_test.py  GNN.ipynb  README.md  analyze_pauses.py  calculate_pred_model_params.py  config.yaml  gen_chap4.sh  graph_data.json  main.ipynb  main.py  modify_graph.py  plot.py  plotter.py  prepare_graph.py  prepare_warehouse_data.py  rack_data.json  requirements.txt  ruff.toml  sort_graph_nodes.py  tracker.py  train.sh  vcpkg_guide.md
figures/: copy_to_windows.sh
models/: N_humans_likelihood_matrix.csv
python/: GNNtracker.py  accurateTracker.py  calc_pred_model_params.py  calculate_pred_model_params.py  confidentTracker.py  constants.py  evaluator.py  figures.py  logger.py  main.py  metrics.py  particleTracker.py  paths.py  plotter.py  prepare_warehouse_data.py  resize_warehouse_data.py  simulation.py  sort_graph_nodes.py  sort_nodes_and_edges.py  test_training_data.py  tracker.py  utils.py
scripts/: prepare_warehouse_data.py  resize_warehouse_data.py
src/: agent.cpp  agent.h  cpp_utils_pybind11.cpp  graph_data.h  human.cpp  human.h  particle.cpp  particle.h  particleTracker.cpp  particleTracker.h  robot.cpp  robot.h  simulation.cpp  simulation.h  simulation_pybind11.cpp  utils.cpp  utils.h
warehouse/: graph_data.json  node_meanings.json  rack_data.json
warehouse_junk/: graph_data copy.json  node_meanings_old.json  rack_data copy.json
